--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1>This is first open source contribution</h1>
     <div class="clock">
       <div class="hand hour" data-hour-hand></div>
       <div class="hand minute" data-minute-hand></div>
